[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastpf"
authors = [{name = "Christoph Kattmann", email = "christoph.kattmann@gmail.com"}]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    'loguru >= 0.6.0',
    'numpy >= 1.16.0',
    'numba >= 0.55.1',
    'pathos >= 0.2.8',
    'threadpoolctl >= 3.1.0',
]
